--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,10 @@
     "terminal.integrated.rendererType": "dom",
     "window.openFilesInNewWindow": "on",
     "window.titleBarStyle": "custom", // save space on linux
-    "workbench.editor.enablePreview": false, // keep all taps open
+    "workbench.editor.enablePreview": false,
+    "files.associations": {
+        "cstdlib": "c",
+        "cmath": "c",
+        "*.tcc": "c"
+    }, // keep all taps open
 }
