boilerplate added and mk
Co-authored-by: Miranda0 <miranda.stoddard@tds.net>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
     "files.associations": {
         "cstdlib": "c",
         "cmath": "c",
-        "*.tcc": "c"
+        "*.tcc": "c",
+        "suftree.h": "c"
     }, // keep all taps open
 }
